--- a/index.html
+++ b/index.html
@@ -37,12 +37,14 @@
         <li><a href="research_interests.html">Brain Interests</a></li>
         <li><a href="advice.html">Navigating This World</a></li>
         <li><a href="blog.html">Blog</a></li>
+        <li><a href="files/wilka_carvalho_CV.pdf">CV</a></li>
       </ul>
       <ul class="side-nav" id="mobile-demo">
         <li><a href="index.html">Home</a></li>
         <li><a href="research_interests.html">Brain Interests</a></li>
         <li><a href="advice.html">Navigating This World</a></li>
         <li><a href="blog.html">Blog</a></li>
+        <li><a href="files/wilka_carvalho_CV.pdf">CV</a></li>
       </ul>
     </div>
   </nav>
@@ -79,19 +81,8 @@
                   All technology and knowledge that we know is the result of  brains operating on the world's information. 
                 </p>
                 <p>
-                  My own attempt to understand the brain is, ultimately, a brain trying to understand, at least for me, itself. <span class="red-text text-accent-4" style="font-weight: bold"> Beautiful. </span>
-                <!-- </p> -->
-                  <!-- It's pattern recognition and inference abilities are responsible for much of man kind's achievement. As I seek to understand it, I must recognize that ultimately, there is a brain trying to understand other brains, and for me, itself.
-
-                  The brain's curiousity   
-
-                  I want to learn about how this is possibe
-
-                  ability to recognize patterns and make intelligent inferences about them has allowed f
-
-                  effectively is responsible for all all of man' development I want to learn about how it achieves this sophistication. -->
-<!--                   <br> 
-                  I find it beautiful that an autonomous system developed through nature's iterations through what was possible. I originally intended to use physics to model and describe physical phenomenon in the brain and correlate it to behavioral phenomenon. I believe that the key to the brain's function is how it stores and processes information. My primary field of choice for studying this is computer science.  -->You can learn more about my interest in the brain and how my brain intends to try to understand itself <a href="research_interests.html"> here</a>. 
+                  My own attempt to understand the brain is, ultimately, a brain trying to understand, at least for me, itself. <span class="red-text text-accent-4" style="font-weight: bold"> Just beautiful. </span>
+                  You can learn more about my interest in the brain and how my brain intends to try to understand itself <a href="research_interests.html"> here</a>. 
                 </p>
               </div>
             </li>
@@ -111,6 +102,7 @@
             </li>
           </ul>
         <h6> <a href="blog.html">I also enjoy writing about various things.</a></h6>
+
         </div>
 
         <div class="card-content grey-text text-darken-3">
