--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- Intro -->
   <div class="intro deep-purple lighten-1 z-depth-1">
     <h1 class="grey-text text-lighten-5">
-      Wilka Torrico de Carvalho
+      Wilka Torrico de Carvalho.
     </h1>
     <h5 class="grey lighten-4 grey-text text-darken-1">
     <b><u>Aspiring</u></b>
