--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link type="text/css" rel="stylesheet" href="/css/styles.css"/>
   <link type="text/css" rel="stylesheet" href="/css/materialize.css"  media="screen,projection"/>
+  <link type="text/css" rel="stylesheet" href="/css/blog.css"/>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
 
 </head>
@@ -31,11 +32,13 @@
     <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
       <li><a href="index.html">Home</a></li>
+      <li><a href="bio.html">Bio</a></li>
       <li><a href="blog.html">Blog</a></li>
       <li><a href="files/wilka_carvalho_CV.pdf">CV</a></li>
     </ul>
     <ul class="side-nav" id="mobile-demo">
       <li><a href="index.html">Home</a></li>
+      <li><a href="bio.html">Bio</a></li>
       <li><a href="blog.html">Blog</a></li>
       <li><a href="files/wilka_carvalho_CV.pdf">CV</a></li>
     </ul>
@@ -65,6 +68,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link type="text/css" rel="stylesheet" href="/css/styles.css" />
   <link type="text/css" rel="stylesheet" href="/css/materialize.css" media="screen,projection" />
+  <link type="text/css" rel="stylesheet" href="/css/Summer Research as an Undergraduate.css" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 
 </head>
@@ -74,11 +78,13 @@
     <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
       <li><a href="index.html">Home</a></li>
+      <li><a href="bio.html">Bio</a></li>
       <li><a href="blog.html">Blog</a></li>
       <li><a href="files/wilka_carvalho_CV.pdf">CV</a></li>
     </ul>
     <ul class="side-nav" id="mobile-demo">
       <li><a href="index.html">Home</a></li>
+      <li><a href="bio.html">Bio</a></li>
       <li><a href="blog.html">Blog</a></li>
       <li><a href="files/wilka_carvalho_CV.pdf">CV</a></li>
     </ul>
@@ -124,12 +130,12 @@
 <footer class="page-footer">
   <div class="container footer grey darken-3 z-depth-1">
     <div class="row">
-      <div class="col l6 s12">
+<!--       <div class="col l6 s12">
         <h5 class="white-text">Footer Content</h5>
         <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
-      </div>
+      </div> -->
       <div class="col l4 offset-l2 s12">
-        <h5 class="white-text center">Other places you can find me</h5>
+        <h5 class="white-text center">Let's Connect</h5>
         <ul class="center">
           <li><a class="grey-text text-lighten-3" href="https://www.linkedin.com/in/wilkacarvalho">LinkedIn</a></li>
           <li><a class="grey-text text-lighten-3" href="https://github.com/wcarvalho">GitHub</a></li>
@@ -140,7 +146,7 @@
   <div class="footer-copyright deep-purple lighten-1 z-depth-1">
     <div class="container">
     <small>&copy; 2015 By Wilka Carvalho </small>
-    <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+    <!-- <a class="grey-text text-lighten-4 right" href="#!">More Links</a> -->
     </div>
   </div>
 </footer>
