--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <ul class="collapsible" data-collapsible="accordian">
         <li>
           <div class="title collapsible-header center">
-            Think about the brain
+            Discuss the brain
           </div>
           <div id="brain" class="description collapsible-body">
             <p>
