--- a/blog.html
+++ b/blog.html
@@ -71,6 +71,10 @@
 </li>
 </ul>
 
+</br>
+
+<h6> <a href="/usefuldocs.html"> This is an aggregate of all material I upload or reference in my posts. </a> </h6>
+
 </div>
 </div>
 </div>
@@ -114,9 +118,7 @@
     </div>
   </div>
   <div class="footer-copyright deep-purple lighten-1 z-depth-1">
-    <div class="container">
     <small>&copy; 2015 By Wilka Carvalho </small>
-    </div>
   </div>
 </footer>
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.js"></script>
