--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </li>
         <li>
           <div class="title collapsible-header center">
-            Help others navigate this world
+            Help others
           </div>
           <div id="help" class="description collapsible-body">
             <p>
@@ -84,7 +84,10 @@
       <p id="conclusion"> 
         This site houses a small <a href="bio.html">bio</a> about myself and a <a href="blog.html">blog</a> in which I will mostly talk about the above two things. You can also find my <a href="files/wilka_carvalho_CV.pdf">CV</a>.
       </p>
-
+      <br>
+      <p id="conclusion">
+      In my blog posts, I will likely upload or reference material I think is useful(documents, code snippets, etc). I will aggregate all of these items in <a href="/usefuldocs.html">this page</a>.
+      </p>
     </div>
   </div>
 </div>
@@ -133,9 +136,7 @@
     </div>
   </div>
   <div class="footer-copyright deep-purple lighten-1 z-depth-1">
-    <div class="container">
     <small>&copy; 2015 By Wilka Carvalho </small>
-    </div>
   </div>
 </footer>
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.js"></script>
