--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </li>
         <li>
           <div class="title collapsible-header center">
-            Help others
+            Give advice
           </div>
           <div id="help" class="description collapsible-body">
             <p>
