--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Wilka Carvalho</title>
 
+  <meta charset="utf-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link type="text/css" rel="stylesheet" href="/css/styles.css"/>
   <link type="text/css" rel="stylesheet" href="/css/materialize.css"  media="screen,projection"/>
@@ -61,9 +62,9 @@
           </div>
           <div id="brain" class="description collapsible-body">
             <p>
-            I have found writing to be excellent for organizing my thoughts and teaching to be excellent for testing my understanding of concepts.
+            I think writing is excellent for organizing my thoughts and teaching for testing my understanding.
             <br><br>
-            As I continue to explore how the brain may function, I will use this as a medium to communicate my progress and teach others what I learn.
+            As I continue to explore how the brain functions, I will use this as a medium to try to communicate my progress and teach others what I learn.
             </p>
           </div>
         </li>
