--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <h5>There are two main things I like to do</h5>
       <ul class="collapsible" data-collapsible="accordian">
         <li>
-          <div class="title collapsible-header center">
+          <div class="title collapsible-header active center">
             Discuss the brain 
             <!-- <span style="font-size: .6rem">(these are clickable)<span> -->
           </div>
