--- a/reference_material.html
+++ b/reference_material.html
@@ -52,7 +52,24 @@
 <div class="col s12 m4 l4">
 <div class="default card">
 
-1.
+<h5 id="calendar-scripts">Calendar Script(s)</h5>
+<ol>
+  <li><a href="#">Time </a></li>
+</ol>
+
+<h5 id="nsf">NSF</h5>
+<ol>
+  <li><a href="/reference_material/nsf/personal_statement.pdf">NSF Personal Statement</a></li>
+  <li><a href="/reference_material/nsf/research_statement.pdf">NSF Research Statement</a></li>
+</ol>
+
+<h5 id="caltech">Caltech</h5>
+<ol>
+  <li><a href="/reference_material/caltech/Faculty.pdf">Faculty Interests </a></li>
+  <li><a href="/reference_material/caltech/Research%Interest.pdf"> Research Interests</a></li>
+</ol>
+
+
 
 </div>
 </div>
@@ -105,7 +122,7 @@
   </div>
 </footer>
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.js"></script>
-<script type="text/javascript" src="js/materialize.js"></script>
+<script type="text/javascript" src="/js/materialize.js"></script>
 <script type="text/javascript">
   
   var loc = window.location.pathname;
