--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
 <img class="me_nsf responsive-img" src="img/me_nsf.jpeg">
 <div id="content">
   <p>
-    I am a Masters student in the <a href="http://www.cs.usc.edu">Computer Science Department</a> at the <a href="http://www.usc.edu">University of Southern California</a>. Currently, my primary research interest is in the development of neuroscience and cognitive science-informed models for artificial neural networks. I look forward to the development of models with information-processing abilities that rival the brains.
+    I am an <a href="https://www.nsfgrfp.org/"> NSF Graduate Research Fellow</a> obtaining my masters degree in <a href="http://www.cs.usc.edu">Computer Science </a> at the <a href="http://www.usc.edu">University of Southern California</a>.
+    </p>
+    <p>
+     Currently, my primary research interest is in the development of neuroscience and cognitive science-informed models for artificial neural networks (ANNs). I look forward to the development of ANN models with information-processing abilities that rival our brains.
   </p>
   <p>
     Here, you can find a small <a href="bio.html">bio</a>, my <a href="blog.html">blog</a>, and my <a href="files/wilka_carvalho_CV.pdf">CV</a>. 
@@ -75,16 +78,6 @@
 <div class="container">
 <div class="col s12 m4 l4">
 <div class="default card">
-
-<p>
-  
-  I think writing is excellent for organizing my thoughts and teaching for testing my understanding. 
-
-  As I continue to explore how the brain functions, I will use this as a medium to try to communicate my progress and teach others what I learn.
-</p>
-<p>
-  Throughout my life, I have found advice, guidance, and mentorship from those more experienced than myself to be invaluable to my success. Here, I hope to "pay it forward." I share what I've learned about things like applying to summer research as an undergraduate, developing effective time and task management skills, etc.
-</p>
 
 <h5 id="blog_title">3 latest posts</h5>
 <ul class="collapsible collection" data-collapsible="accordian">
