--- a/reference_material.html
+++ b/reference_material.html
@@ -52,21 +52,21 @@
 <div class="col s12 m4 l4">
 <div class="default card">
 
-<h5 id="calendar-scripts">Calendar Script(s)</h5>
+<h5 id="time-management-system">Time Management System</h5>
 <ol>
-  <li><a href="#">Time </a></li>
+  <li><a href="#">Calendar Script</a></li>
 </ol>
 
 <h5 id="nsf">NSF</h5>
 <ol>
-  <li><a href="/reference_material/nsf/personal_statement.pdf">NSF Personal Statement</a></li>
-  <li><a href="/reference_material/nsf/research_statement.pdf">NSF Research Statement</a></li>
+  <li><a href="/files/nsf/personal_statement.pdf">Personal Statement</a></li>
+  <li><a href="/files/nsf/research_statement.pdf">Research Statement</a></li>
 </ol>
 
 <h5 id="caltech">Caltech</h5>
 <ol>
-  <li><a href="/reference_material/caltech/Faculty.pdf">Faculty Interests </a></li>
-  <li><a href="/reference_material/caltech/Research%Interest.pdf"> Research Interests</a></li>
+  <li><a href="/files/caltech/Research%20Interest.pdf"> Research Interests</a></li>
+  <li><a href="/files/caltech/Faculty.pdf">Faculty Interests </a></li>
 </ol>
 
 
