--- a/reference_material.html
+++ b/reference_material.html
@@ -57,13 +57,13 @@
   <li><a href="#">Calendar Script</a></li>
 </ol>
 
-<h5 id="nsf">NSF</h5>
+<h5 id="nsf-fellowship-application">NSF Fellowship Application</h5>
 <ol>
   <li><a href="/files/nsf/personal_statement.pdf">Personal Statement</a></li>
   <li><a href="/files/nsf/research_statement.pdf">Research Statement</a></li>
 </ol>
 
-<h5 id="caltech">Caltech</h5>
+<h5 id="caltech-reu-application">Caltech REU Application</h5>
 <ol>
   <li><a href="/files/caltech/Research%20Interest.pdf"> Research Interests</a></li>
   <li><a href="/files/caltech/Faculty.pdf">Faculty Interests </a></li>
