--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </h5>
 
   <div>
-    <img src="/img/brain-icon.png">
+    <img src="https://wcarvalho.github.io/img/brain-icon.png">
   </div>
 </div>
 <nav> 
@@ -103,7 +103,7 @@
     
 </ul>
 
-<h5> <a href="/reference_material.html"> Reference Material </a> </h5>
+<h5> <a href="https://wcarvalho.github.io/reference_material.html"> Reference Material </a> </h5>
 
 </div>
 </div>
@@ -118,7 +118,7 @@
       <div class="col l4 s12">
         <div class="center">
           <a class="grey-text text-lighten-3" href="https://www.linkedin.com/in/wilkacarvalho">
-            <img class="responsive-img" src="/img/linkedin.svg">
+            <img class="responsive-img" src="https://wcarvalho.github.io/img/linkedin.svg">
           </a>
         </div>
         <div class="center">
@@ -130,7 +130,7 @@
       <div class="col l4 s12">
         <div class="center">
           <a class="grey-text text-lighten-3" href="https://github.com/wcarvalho">
-            <img class="responsive-img" src="/img/github.svg">
+            <img class="responsive-img" src="https://wcarvalho.github.io/img/github.svg">
           </a>
         </div>
         <div class="center">
@@ -142,7 +142,7 @@
       <div class="col l4 s12">
         <div class="center">
           <a class="grey-text text-lighten-3" href="https://www.quora.com/Wilka-Carvalho">
-            <img class="responsive-img" src="/img/quora.svg">
+            <img class="responsive-img" src="https://wcarvalho.github.io/img/quora.svg">
           </a>
         </div>
         <div class="center">
@@ -158,7 +158,7 @@
   </div>
 </footer>
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.js"></script>
-<script type="text/javascript" src="/js/materialize.js"></script>
+<script type="text/javascript" src="https://wcarvalho.github.io/js/materialize.js"></script>
 <script type="text/javascript">
   
   var loc = window.location.pathname;
