--- a/index_old.html
+++ b/index_old.html
@@ -24,7 +24,7 @@
   </h5>
 
   <div>
-    <img src="/img/brain-icon.png">
+    <img src="https://wcarvalho.github.io/img/brain-icon.png">
   </div>
 </div>
 <nav> 
@@ -89,7 +89,7 @@
     </p>
     <br>
     <p id="conclusion">
-    In my blog posts, I will likely upload or reference material I think is useful(documents, code snippets, etc). I will aggregate all of these items in <a href="/usefuldocs.html">this page</a>.
+    In my blog posts, I will likely upload or reference material I think is useful(documents, code snippets, etc). I will aggregate all of these items in <a href="https://wcarvalho.github.io/usefuldocs.html">this page</a>.
     </p>
   </div>
 </div>
@@ -139,7 +139,7 @@
       <div class="col l4 s12">
         <div class="center">
           <a class="grey-text text-lighten-3" href="https://www.linkedin.com/in/wilkacarvalho">
-            <img class="responsive-img" src="/img/linkedin.svg">
+            <img class="responsive-img" src="https://wcarvalho.github.io/img/linkedin.svg">
           </a>
         </div>
         <div class="center">
@@ -151,7 +151,7 @@
       <div class="col l4 s12">
         <div class="center">
           <a class="grey-text text-lighten-3" href="https://github.com/wcarvalho">
-            <img class="responsive-img" src="/img/github.svg">
+            <img class="responsive-img" src="https://wcarvalho.github.io/img/github.svg">
           </a>
         </div>
         <div class="center">
@@ -163,7 +163,7 @@
       <div class="col l4 s12">
         <div class="center">
           <a class="grey-text text-lighten-3" href="https://www.quora.com/Wilka-Carvalho">
-            <img class="responsive-img" src="/img/quora.svg">
+            <img class="responsive-img" src="https://wcarvalho.github.io/img/quora.svg">
           </a>
         </div>
         <div class="center">
@@ -179,7 +179,7 @@
   </div>
 </footer>
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.js"></script>
-<script type="text/javascript" src="/js/materialize.js"></script>
+<script type="text/javascript" src="https://wcarvalho.github.io/js/materialize.js"></script>
 <script type="text/javascript">
   
   var loc = window.location.pathname;
