--- a/blog.html
+++ b/blog.html
@@ -24,7 +24,7 @@
   </h5>
 
   <div>
-    <img src="https://wcarvalho.github.io/img/brain-icon.png">
+    <img src="/img/brain-icon.png">
   </div>
 </div>
 <nav> 
@@ -95,7 +95,7 @@ For my posts, I upload and reference material I think is useful (articles, code 
       <div class="col l4 s12">
         <div class="center">
           <a class="grey-text text-lighten-3" href="https://www.linkedin.com/in/wilkacarvalho">
-            <img class="responsive-img" src="https://wcarvalho.github.io/img/linkedin.svg">
+            <img class="responsive-img" src="/img/linkedin.svg">
           </a>
         </div>
         <div class="center">
@@ -107,7 +107,7 @@ For my posts, I upload and reference material I think is useful (articles, code 
       <div class="col l4 s12">
         <div class="center">
           <a class="grey-text text-lighten-3" href="https://github.com/wcarvalho">
-            <img class="responsive-img" src="https://wcarvalho.github.io/img/github.svg">
+            <img class="responsive-img" src="/img/github.svg">
           </a>
         </div>
         <div class="center">
@@ -119,7 +119,7 @@ For my posts, I upload and reference material I think is useful (articles, code 
       <div class="col l4 s12">
         <div class="center">
           <a class="grey-text text-lighten-3" href="https://www.quora.com/Wilka-Carvalho">
-            <img class="responsive-img" src="https://wcarvalho.github.io/img/quora.svg">
+            <img class="responsive-img" src="/img/quora.svg">
           </a>
         </div>
         <div class="center">
@@ -135,7 +135,7 @@ For my posts, I upload and reference material I think is useful (articles, code 
   </div>
 </footer>
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.js"></script>
-<script type="text/javascript" src="https://wcarvalho.github.io/js/materialize.js"></script>
+<script type="text/javascript" src="/js/materialize.js"></script>
 <script type="text/javascript">
   
   var loc = window.location.pathname;
