--- a/blog.html
+++ b/blog.html
@@ -81,7 +81,7 @@ For my posts, I upload and reference material I think is useful (articles, code 
           </table>
         </div>
         <div class="inline-collapse body collapsible-body">
-            I present an overview of how to use the script in my post, "A Prescription for Managing and Tracking Your Time," to track time delegation in Google Calendar using a Google spreadsheet
+            A brief overview of how to use the script in my post, "A Prescription for Managing and Tracking Your Time," to track time delegation in Google Calendar using a Google spreadsheet
         </div>
       </li>
     
