--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <div class="col s12 m4 l4">
 <div class="default card">
 
-<h5 id="blog_title">Latest posts</h5>
+<h5 id="blog_title"><b>Latest posts</b></h5>
 
 <ol>
 
