--- a/blog.html
+++ b/blog.html
@@ -115,7 +115,7 @@ For my posts, I upload and reference material I think is useful (articles, code 
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-47674613-1', 'joshualande.com');
+  ga('create', 'UA-72232702-1', 'auto');
   ga('send', 'pageview');
 
 </script>
