--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       I am a Masters student and <a href="https://www.nsfgrfp.org/"> NSF Graduate Research Fellow</a> in the <a href="http://www.cs.usc.edu">Computer Science Department</a> at the <a href="http://www.usc.edu">University of Southern California</a>.
       <br><br>
     
-      My primary research interest is in the development of neuroscience- and cognitive science-informed models of artificial neural networks with brain-rivaling information-processing capabilities.
+      My primary research interest is the development of neuroscience- and cognitive science-informed artificial intelligence and machine learning models with brain-rivaling information-processing capabilities.
       <br><br>
     
       Here, you can find a small <a href="bio.html">bio</a>, my <a href="blog.html">blog</a>, and my <a href="files/wilka_carvalho_CV.pdf">CV</a>. 
