--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <div class="col s12 m4 l4">
 <div class="default card">
 
-<h5 id="blog_title"><b>Latest posts</b></h5>
+<h5 id="blog_title"><b>Recent posts</b></h5>
 
 <ol>
 
